# SimpleVoxel_git

./: .gitignore  CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
resources/shaders/: SimpleTestShader.glsl
src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  MarchingCube.cpp  MarchingCube.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/stb/: stb_image.cpp
src/test/: Test.h  TestMarchingCubes.cpp  TestMarchingCubes.h
